--- a/html/lesson_plans/social_justice_introduction.html
+++ b/html/lesson_plans/social_justice_introduction.html
@@ -49,7 +49,9 @@
 					<div class="specs-container">
 						<p><strong>Cluster Developer/Lesson Plan Developer:</strong> Darian Wilson <a class="mail" href="mailto:darianaleynawilson@outlook.com?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
 
-						<p><strong>Peer Reviewers:</strong> Adrian S. Wisnicki (internal), Cherrie Kwok (internal), Nirshan Perera (external)</p><!-- Change -->
+						<p><strong>Peer Reviewers:</strong> Cherrie Kwok (internal), Nirshan Perera (external)</p><!-- Change -->
+
+						<p><strong>Lesson Plan Guide/Webpage Developer:</strong> Adrian S. Wisnicki <a class="mail" href="mailto:awisnicki@yahoo.com ?subject=question about Undisciplining the Victorian Classroom"><i class="fa fa-envelope fa-sm" aria-hidden="true"></i> <span>Contact</span></a></p><!-- Change -->
 
 						<strong>Lesson Plan Pages:</strong> 
 						<ol>				
@@ -73,6 +75,31 @@
 				<section aria-labelledby="introduction">
 					<h3 id="introduction">Introduction</h3>
 
+					<p>In an era of increasingly restrictive and exclusionary educational laws that surveil the public school system, there is an ongoing, exigent need for critically focused readings by people of color (POC). This set of lesson plans for high school classrooms seeks to offer readings and discussion questions that consider both historical and contemporary perspectives on nationalism, revolution, futurity, and other activist efforts.</p>
+
+					<p>The four lesson plans in this cluster center the voices of POC groups around the globe in different time periods, ranging from the imperial reign of Queen Victoria (1837-1901) to the current era. This focus on diverse historical voices showcases how issues of race and colonialism are not new concepts and are instead inextricably tied to the rise of western empires and how these logics can be applied to the American empire.</p>
+
+					<p>I am an M.A. student at the University of Nebraska Lincoln with a B.A. in English education. I created these lesson plans during the 2023-2024 academic year, under the guidance of Professor Adrian S. Wisnicki. They were developed while I was a research assistant (RA) for Professor Wisnicki. The lesson plans formed the primary focus of my work during the RA-ship. After the end of my RA-ship, I continued to revise the lesson plans. This included two stages of peer review, the first from an internal reviewer (Cherrie Kwok) and the second from an external one (Nirshan Perera).</p>
+
+					<p>My intention for these lesson plans is not to prescribe how discussions of minoritization and imperialism should ensue in the high school classroom; for that, I defer to the expertise and insights of the educator facilitating these lesson plans. Instead, my lesson plans serve as a suggested framework to initiate classroom discussions of race, colonialism, empire, and activism by providing significant writings and literature from around the globe as well as suggested discussion questions, activities, and week-by-week breakdowns.</p>
+
+					<p>Although covering different topics, the four lesson plans work well separately or in tandem with one another. My hope is that the ethos of these lesson plans encourages continual discussions that go far beyond the confines of these lesson plans and the individual classrooms in which they are taught.</p>
+
+					<section aria-labelledby="focus">
+						<h4 id="focus">Focus, Scope, and Design of the Lesson Plans</h4>
+
+						<p>The lesson plans are tailored for high school students, focusing on materials from the Victorian era and beyond. Rooted in a commitment to fostering cultural and historical awareness, the lesson plans delve into the social justice movements initiated by groups impacted by colonization, racism, and sexism.</p>
+
+						<p>Designed to align with the Nebraska Education standards for high school students, the lesson plans offer a comprehensive approach to learning. They cover a range of topics integral to a well-rounded secondary education, including dystopian literature, nationalism, poetry, and rhetorical strategies.</p>
+
+						<p>The lesson plans are a valuable resource for high school educators seeking to diversify their classroom materials. By providing accessible and detailed lesson plans, I have aimed to support educators in incorporating multicultural texts into their curriculum effectively.</p>
+
+						<p>Each lesson plan is structured to span two to three weeks, offering a detailed framework for exploration. Within these plans, high school educators will find a week-by-week breakdown of overarching concepts, discussion questions, activities, and materials. Flexibility is built into the design, allowing educators to adapt the plans to suit their teaching style and classroom needs.</p>
+
+						<p>These lesson plans' primary goal is to nurture critical thinking and foster meaningful discussions on positionality, oppression, and social justice. As educators guide students through these discussions, it's essential to approach sensitive topics with empathy and care, creating a supportive environment for dialogue, reflection, and learning.</p>
+
+					</section>
+
 				</section>
 
 				<section aria-labelledby="biography">
@@ -89,7 +116,7 @@
 				
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page/Lesson Plan Citation (MLA)</h3>
-					<p>Darian Wilson. “Social Justice Movements in the Victorian Era and Beyond: Introduction.” Adrian S. Wisnicki, Cherrie Kwok, Nirshan Perera, peer revs. <em>Undisciplining the Victorian Classroom</em>, 2025, <a href="/html/lesson_plans/social_justice_introduction.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/social_justice_introduction.html</a>.</p><!-- Change -->
+					<p>Darian Wilson. “Social Justice Movements in the Victorian Era and Beyond: Introduction.” Cherrie Kwok, Nirshan Perera, peer revs.;  Adrian S. Wisnicki, les. plan guide. <em>Undisciplining the Victorian Classroom</em>, 2025, <a href="/html/lesson_plans/social_justice_introduction.html" class="cite-link">https://undiscipliningvc.org/html/lesson_plans/social_justice_introduction.html</a>.</p><!-- Change -->
 				</section>
 			</main>
 			
