--- a/0_dev/0_page-dev/2_python-files/template-lesson-plan-1.html
+++ b/0_dev/0_page-dev/2_python-files/template-lesson-plan-1.html
@@ -100,7 +100,7 @@
 					</section>
 				</section>
 
-				<section aria-labelledby="structure">
+				<section aria-labelledby="materials">
 					<h3 id="materials">Suggested Materials</h3>
 
 					<section aria-labelledby="materials-1">
