--- a/html/lesson_plans/social_dystopian_utopian.html
+++ b/html/lesson_plans/social_dystopian_utopian.html
@@ -59,23 +59,24 @@
 					</div>
 				</section>
 
-				<!-- <section class="menu-container" aria-labelledby="menu">
+				<section class="menu-container" aria-labelledby="menu">
 					<h3 id="menu">Menu</h3>
 					<ol class="menu">
-						<li><a href="#overview">Overview</a></li>
-						<li><a href="#structure">Structure and Organisation</a></li>
-						<li><a href="#materials">Suggested Materials</a>
+						<li><a href="#goals-and-questions">Goals and Questions</a></li>
+						<li><a href="#usage">Usage and Week-by-Week Layout of Lesson Plan</a>
 							<ol>
-								<li><a href="materials-1">[Change to first title]</a></li>
-								<li><a href="materials-2">[Change to second title]</a></li>
-								<li><a href="materials-3">[Change to third title]</a></li>
+								<li><a href="#overview">Overview</a></li>
+								<li><a href="#week-one">Week One: What is Futurity, Utopia, and Afrofuturism?</a></li>
+								<li><a href="#week-two">Week Two: What is Dystopian Literature?</a></li>
+								<li><a href="#week-three">Week Three: The Difference Between Dystopian and Utopian Literature</a></li>
 							</ol>
 						</li>
+						<li><a href="#acknowledgments">Acknowledgments</a></li>
 						<li><a href="#biography">Developer Biography</a></li>
 						<li><a href="#caption">Tile/Header Image Caption</a></li>
 						<li><a href="#citation">Page/Lesson Plan Citation (MLA)</a></li>
 					</ol>
-				</section> -->
+				</section>
 
 				<!-- menu + subpoints -->
 
@@ -91,8 +92,8 @@
 					<p>Within this unit, several critical concerns and questions arise for discussion. A significant one centers around the impact of race on both dystopian and utopian literary genres. Additionally, the lesson plan delves into exploring the distinctions between dystopian and utopian literature, while also considering arguments regarding their classification within the same genre. Throughout the lesson plan, students also examine how real-world circumstances distinctly influence these genres and whether the circumstances primarily serve as reflections on the future or as commentaries on contemporary society.</p>
 				</section>
 
-				<section aria-labelledby="usage-and-week-by-week-layout-of-lesson-plan">
-					<h3 id="usage-and-week-by-week-layout-of-lesson-plan">Usage and Week-by-Week Layout of Lesson Plan</h3>
+				<section aria-labelledby="usage">
+					<h3 id="usage">Usage and Week-by-Week Layout of Lesson Plan</h3>
 
 					<section aria-labelledby="overview">
 						<h4 id="overview">Overview</h4>
@@ -100,8 +101,10 @@
 						<p>This unit is made in mind for high-school-level students. Based on how the readings are scaffolded and discussion questions, this could be appropriate for a 9-12th grade range. (Note: This <a aria-label="External Link" href="http://govdocs.nebraska.gov/epubs/E2000/B109-2013.pdf">guide</a> (PDF) shows how one may approach changing the current standards for this lesson plan into a different grade-level than the current standards set at the 10th grade level.) Currently structured for three weeks, this unit has the flexibility for expansion by incorporating additional activities and delving deeper into the suggested readings. Conversely, the unit can be streamlined into a one-week format if the emphasis shifts toward establishing a general understanding of utopian and dystopian literature. The adaptable nature of this unit allows for customization based on the depth of exploration desired within the given timeframe.</p>
 					</section>
 
+					<hr/>
+
 					<section aria-labelledby="week-one">
-						<h4 id="week-one">What is Futurity, Utopia, and Afrofuturism? (Week One)</h4>
+						<h4 id="week-one">Week One: What is Futurity, Utopia, and Afrofuturism?</h4>
 
 						<p>During the first week, the focus is on elucidating the reasons individuals often turn to the future when engaging in discussions about contemporary politics and social movements, especially those regarding race. To facilitate this exploration, students gain a foundational understanding of “futurity” and its application in recent literature. The article “The Novel Solutions of Utopian Fiction” serves as a key resource, delving into the sociological aspects of utopia. Additionally, a TED talk on the history of utopia offers a more accessible entry point into comprehending the motivations behind the existence of utopian visions.</p>
 
@@ -175,8 +178,10 @@
 						</section>
 					</section>
 
+					<hr/>
+
 					<section aria-labelledby="week-two">
-						<h4 id="week-two">What is Dystopian Literature? (Week Two)</h4>
+						<h4 id="week-two">Week Two: What is Dystopian Literature?</h4>
 
 						<p>During the second week, students delve deeper into the nuances of dystopian literature. The fundamental question of why dystopias are imagined and what societal conditions give rise to them are explored. Questions of how racial biases and injustices affect the genre also come up and should be a major point of discussion throughout this week. Through engaging discussions, students examine both the merits and pitfalls of dystopian narratives, encouraging critical thinking about their implications.</p>
 
@@ -256,8 +261,10 @@
 						</section>
 					</section>
 
+					<hr/>
+
 					<section aria-labelledby="week-three">
-						<h4 id="week-three">The Difference Between Dystopian and Utopian Literature (Week Three)</h4>
+						<h4 id="week-three">Week Three: The Difference Between Dystopian and Utopian Literature</h4>
 
 						<p>During the third week, students focus on exploring and analyzing the contrasting genres of dystopian and utopian literature. Through the examination of two fictional short stories, the students delve into the differing tones and intents of the stories and examine how the genre of each story portrays alternative visions of society.</p>
 
