--- a/html/about/bibliography.html
+++ b/html/about/bibliography.html
@@ -571,7 +571,7 @@
 
 					<p>Tharu, Susie, editor. <em>Subject to Change: Teaching Literature in the Nineties</em>. Orient Longman Limited, 1998.</p>
 
-					<p>Thatcher, Toby. 2021. “<a aria-label="External Link" href="https://youtu.be/nThGpVp6I00">Mary Seacole / Wonderful Adventures of Mrs. Seacole / Akamo / The Sick-Room / Nineteenth Circle</a>.” Short film. <em>YouTube</em>.</p>
+					<p>Thatcher, Toby. 2021. “<a aria-label="External Link" href="https://youtu.be/nThGpVp6I00">Mary Seacole / Wonderful Adventures of Mrs. Seacole / Akamo / The Sick-Room / Nineteenth Circle</a>.” Short film. YouTube.</p>
 
 					<p>Tinsley, Natasha Omise’eke. “<a aria-label="External Link" href="https://doi.org/10.1215/10642684-2007-030">Black Atlantic, Queer Atlantic: Queer Imaginings of the Middle Passage</a>.” <em>GLQ</em>, vol. 14, no. 2–3, 2008, pp. 191–215.</p>
 
