--- a/html/lesson_plans/social_dystopian_utopian.html
+++ b/html/lesson_plans/social_dystopian_utopian.html
@@ -5,7 +5,7 @@
     <title>Dystopian and Utopian Literature | Undisciplining the Victorian Classroom</title><!-- Change -->
 		<meta name="description" content="Examines how marginalized authors use speculative fiction to address race, colonialism, and social inequities through texts by DuBois and Hossain."/><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="robots" content="index, follow"/>
+		<meta name="robots" content="noindex, nofollow"/>
 		<meta name="theme-color" content="#143D5D"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
@@ -62,7 +62,7 @@
 				<section class="menu-container" aria-labelledby="menu">
 					<h3 id="menu">Menu</h3>
 					<ol class="menu">
-						<li><a href="#goals-and-questions">Goals and Questions</a></li>
+						<li><a href="#goals">Goals and Questions</a></li>
 						<li><a href="#usage">Usage and Week-by-Week Layout of Lesson Plan</a>
 							<ol>
 								<li><a href="#overview">Overview</a></li>
@@ -80,8 +80,8 @@
 
 				<!-- menu + subpoints -->
 
-				<section aria-labelledby="goals-and-questions">
-					<h3 id="goals-and-questions">Goals and Questions</h3>
+				<section aria-labelledby="goals">
+					<h3 id="goals">Goals and Questions</h3>
 
 					<p>In times of political upheaval, societal unrest, or intellectual evolution, authors often direct their gaze toward the future. Dystopia, a term first coined by Thomas More in 1516,<a aria-label="External Link" href="#endnote-1" class="endnote-ref" id="endnote-1-ref">1</a> envisions a corrupted future that frequently mirrors the anxieties and preoccupations of the contemporary era. Dystopian literature serves as a refuge for the exploration of radical ideas and reflections on the current state of existence. Conversely, utopias also arise from concerns about the future but opt to imagine a world that has successfully purged itself of present issues, existing in a liberated and transcendent liminal space. Utopian fiction advocates for change by presenting a vision of a hopeful future and the transformative possibilities that could positively alter society.</p>
 
