--- a/html/lesson_plans/social_rhetoric_revolution.html
+++ b/html/lesson_plans/social_rhetoric_revolution.html
@@ -5,7 +5,7 @@
     <title>Rhetoric of Revolution | Undisciplining the Victorian Classroom</title><!-- Change -->
 		<meta name="description" content="Analyzes how rhetorical strategies were employed by figures like Martin Luther King, Jr., Malcolm X, and global activists to combat oppression and effect social change."/><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="robots" content="index, follow"/>
+		<meta name="robots" content="noindex, nofollow"/>
 		<meta name="theme-color" content="#143D5D"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
@@ -62,7 +62,7 @@
 				<section class="menu-container" aria-labelledby="menu">
 					<h3 id="menu">Menu</h3>
 					<ol class="menu">
-						<li><a href="#goals-and-questions">Goals and Questions</a></li>
+						<li><a href="#goals">Goals and Questions</a></li>
 						<li><a href="#usage">Usage and Week-by-Week Layout of Lesson Plan</a>
 							<ol>
 								<li><a href="#overview">Overview</a></li>
@@ -77,8 +77,8 @@
 					</ol>
 				</section>
 
-				<section aria-labelledby="goals-and-questions">
-					<h3 id="goals-and-questions">Goals and Questions</h3>
+				<section aria-labelledby="goals">
+					<h3 id="goals">Goals and Questions</h3>
 					
 					<p>In times of significant political unrest and social inequality, the powerful rhetoric of talented speakers has often sparked revolutions. Such rhetoric has historically intertwined with the struggles of marginalized communities, particularly people of color, who have used persuasive language to resist oppression from governmental and societal forces. Figures such as Martin Luther King Jr. and Malcolm X played pivotal roles in the civil rights movements of the 1960s and beyond through their speeches.</p>
 					
