--- a/html/lesson_plans/social_resources_race.html
+++ b/html/lesson_plans/social_resources_race.html
@@ -5,7 +5,7 @@
     <title>Resources on Race and Social Justice | Undisciplining the Victorian Classroom</title><!-- Change -->
 		<meta name="description" content="Provides resources from a variety of educators for facilitating race and social justice discussions in the high school classroom."/><!-- Change -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-		<meta name="robots" content="index, follow"/>
+		<meta name="robots" content="noindex, nofollow"/>
 		<meta name="theme-color" content="#143D5D"/>
 		<link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png"/>
 		<link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png"/>
