--- a/html/lesson_plans/contemporary_undisciplining_introduction.html
+++ b/html/lesson_plans/contemporary_undisciplining_introduction.html
@@ -39,7 +39,7 @@
 			<main id="main" aria-labelledby="lesson-plan">		
 				<h2 id="lesson-plan">Undisciplining In and Through Contemporary Texts</h2>
 				<div class="aspect-ratio-box">
-					<img style="object-position: 80% 10%;" src="/img/lesson_plans/uvc_0084-900px.jpg" srcset="/img/lesson_plans/uvc_0084-900px.jpg 900w, /img/lesson_plans/uvc_0084-750px.jpg 750w, /img/lesson_plans/uvc_0084-600px.jpg 600w, /img/lesson_plans/uvc_0084-450px.jpg 450w, /img/lesson_plans/uvc_0084-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="Kingston harbor with a few sailboats visible in the background."/>
+					<img style="object-position: 80% 10%;" src="/img/lesson_plans/uvc_0084-900px.jpg" srcset="/img/lesson_plans/uvc_0084-900px.jpg 900w, /img/lesson_plans/uvc_0084-750px.jpg 750w, /img/lesson_plans/uvc_0084-600px.jpg 600w, /img/lesson_plans/uvc_0084-450px.jpg 450w, /img/lesson_plans/uvc_0084-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="An open laptop computer with Victorian-style steampunk items around it including a camera."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 				
