--- a/html/lesson_plans.html
+++ b/html/lesson_plans.html
@@ -50,12 +50,29 @@
 					<div><a href="/html/lesson_plans/call_for_lesson_plan_decadence.html"><img style="object-position: 50% 100%;" loading="lazy" src="/img/about/tiles/uvc_0045-930px.jpg" srcset="/img/about/tiles/uvc_0045-930px.jpg 930w, /img/about/tiles/uvc_0045-814px.jpg 814w, /img/about/tiles/uvc_0045-662px.jpg 662w, /img/about/tiles/uvc_0045-568px.jpg 568w, /img/about/tiles/uvc_0045-530px.jpg 530w, /img/about/tiles/uvc_0045-465px.jpg 465w, /img/about/tiles/uvc_0045-407px.jpg 407w, /img/about/tiles/uvc_0045-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A geometric and concentric hexagonal tapestry"/></a></div>
 				</section> -->
 
-				<section aria-labelledby="contemporary-1">
-					<h3 id="contemporary-1">Undisciplining in and through Contemporary Texts</h3>
-					<div><a href="/html/lesson_plans/contemporary_undisciplining_introduction.html"><img style="object-position: 50% 100%;" loading="lazy" src="/img/lesson_plans/tiles/uvc_0084-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0084-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0084-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0084-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0084-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0084-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0084-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0084-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0084-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="A sweeping vista of the city of Palestine with people kneeling in the foreground."/><span>Cluster Introduction</span></a></div>
+				<section aria-labelledby="social-1">
+					<h3 id="social-1">Social Justice Movements in the Victorian Era and Beyond</h3>
+					<div><a href="/html/lesson_plans/contemporary_undisciplining_introduction.html"><img style="object-position: 50% 100%;" loading="lazy" src="/img/lesson_plans/tiles/uvc_0093-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0093-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0093-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0093-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0093-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0093-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0093-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0093-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0093-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="Diverse group of demonstrators with raised fists, one person holding a green 'FREEDOM' sign."/><span>Cluster Introduction</span></a></div>
 				</section>
 
-				<section>
+				<section  aria-labelledby="social-2">
+					<h3 id="social-2">Social Justice Movements in the Victorian Era and Beyond</h3>
+					<ul>
+						<li>Lesson Plans</li>
+						<li><a href="/html/lesson_plans/social_dystopian_utopian.html">Dystopian and Utopian Literature</a></li>
+						<li><a href="/html/lesson_plans/social_rhetoric_revolution.html">Rhetoric of Revolution</a></li>
+						<li><a href="/html/lesson_plans/social_what_nationalism.html">What is Nationalism?</a></li>
+						<li><a href="/html/lesson_plans/social_introduction_poetry.html">Introduction to Poetry</a></li>
+						<li><a href="/html/lesson_plans/social_resources_race.html">Resources on Race and Social Justice</a></li>					
+					</ul>
+				</section>
+
+				<section aria-labelledby="contemporary-1">
+					<h3 id="contemporary-1">Undisciplining in and through Contemporary Texts</h3>
+					<div><a href="/html/lesson_plans/contemporary_undisciplining_introduction.html"><img style="object-position: 50% 100%;" loading="lazy" src="/img/lesson_plans/tiles/uvc_0084-930px.jpg" srcset="/img/lesson_plans/tiles/uvc_0084-930px.jpg 930w, /img/lesson_plans/tiles/uvc_0084-814px.jpg 814w, /img/lesson_plans/tiles/uvc_0084-662px.jpg 662w, /img/lesson_plans/tiles/uvc_0084-568px.jpg 568w, /img/lesson_plans/tiles/uvc_0084-530px.jpg 530w, /img/lesson_plans/tiles/uvc_0084-465px.jpg 465w, /img/lesson_plans/tiles/uvc_0084-407px.jpg 407w, /img/lesson_plans/tiles/uvc_0084-265px.jpg 265w" sizes="(min-width: 1220px) 465px, (min-width: 1000px) calc(27.5vw + 135px), (min-width: 780px) 663px, calc(96.3vw - 44px)" alt="An open laptop computer with Victorian-style steampunk items around it including a camera.."/><span>Cluster Introduction</span></a></div>
+				</section>
+
+				<section  aria-labelledby="contemporary-2">
 					<h3 id="contemporary-2">Undisciplining in and through Contemporary Texts</h3>
 					<ul>
 						<li>Lesson Plans</li>
