--- a/sitemap.html
+++ b/sitemap.html
@@ -66,6 +66,15 @@
 							<ol>
 							<!-- <li><a href="/html/lesson_plans/call_for_lesson_plan_decadence.html">Call for Participants: Global Decadence and Aestheticism Lesson Plan Cluster (2024)</a></li> -->
 							<!-- <li><a href="/html/lesson_plans/call_for_lesson_plan_participants.html">Call for Participants: Lesson Plans on Female POC Folklorists (2023)</a></li> -->
+							<li><a href="html/lesson_plans/social_justice_introduction.html">Social Justice Movements in the Victorian Era and Beyond</a>
+								<ol>
+									<li><a href="/html/lesson_plans/social_dystopian_utopian.html">Dystopian and Utopian Literature</a></li>
+									<li><a href="/html/lesson_plans/social_rhetoric_revolution.html">Rhetoric of Revolution</a></li>
+									<li><a href="/html/lesson_plans/social_what_nationalism.html">What is Nationalism?</a></li>
+									<li><a href="/html/lesson_plans/social_introduction_poetry.html">Introduction to Poetry</a></li>
+									<li><a href="/html/lesson_plans/social_resources_race.html">Resources on Race and Social Justice</a></li>
+								</ol>
+							</li>							 
 								<li><a href="html/lesson_plans/contemporary_undisciplining_introduction.html">Undisciplining In and Through Contemporary Texts</a>
 									<ol>
 										<li><a href="html/lesson_plans/contemporary_undisciplining_ecocolonialism.html">Undisciplining Ecocolonialism with Leslie Marmon Silko</a></li>
