--- a/html/about/project_contributors.html
+++ b/html/about/project_contributors.html
@@ -115,6 +115,7 @@
 						<li><strong>Daný van Dam</strong> (Leiden University)</li>
 						<li><strong>Alisha Walters</strong> (Penn State Abington)</li>
 						<li><strong>Winter Jade Werner</strong> (Wheaton College)</li>
+						<li><strong>Darian Wilson</strong> (University of Nebraska-Lincoln)</li>
 						<li><strong>Adah Wisnicki</strong> (Prairie Hill Learning Center)</li>
 						<li><strong>Rae X. Yan</strong> (University of Florida)</li>
 					</ul>
