--- a/html/assignments/call_for_assignments.html
+++ b/html/assignments/call_for_assignments.html
@@ -2,8 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8"/>
-    <title>Call for Assignments (2023) | Undisciplining the Victorian Classroom</title>
-		<meta name="description" content="Announces a call for assignments (2023) that will model inclusive, antiracist, antiableist, and anticolonial assignment practices for Victorian Studies at large."/>
+    <title>Call for Assignments (2025) | Undisciplining the Victorian Classroom</title>
+		<meta name="description" content="Announces a call for assignments (2025) that focus on the intersection of race and dis/ability."/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<meta name="robots" content="index, follow"/>
 		<meta name="theme-color" content="#143D5D"/>
@@ -37,7 +37,7 @@
 			<header id="header"></header>
 
 			<main id="main" aria-labelledby="assignments">
-				<h2 id="assignments">Call for Assignments (2023)</h2>
+				<h2 id="assignments">Call for Assignments (2025)</h2>
 				<div class="aspect-ratio-box">
 					<img src="/img/assignments/uvc_0040-1800px.jpg" srcset="/img/assignments/uvc_0040-1800px.jpg 1800w, /img/assignments/uvc_0040-1650px.jpg 1650w, /img/assignments/uvc_0040-1500px.jpg 1500w, /img/assignments/uvc_0040-1350px.jpg 1350w, /img/assignments/uvc_0040-1200px.jpg 1200w, /img/assignments/uvc_0040-1050px.jpg 1050w, /img/assignments/uvc_0040-900px.jpg 900w, /img/assignments/uvc_0040-750px.jpg 750w, /img/assignments/uvc_0040-600px.jpg 600w, /img/assignments/uvc_0040-450px.jpg 450w, /img/assignments/uvc_0040-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of wool, single interlocking tapestry weave; two selvages present."/>
 					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
@@ -56,12 +56,12 @@
 				<section aria-labelledby="overview">
 					<h3 id="overview">Overview</h3>
 
-					<p><em>Undisciplining the Victorian Classroom</em> announces a call for assignments that model inclusive, antiracist, antiableist, and anticolonial assignment practices for teaching the nineteenth century. Anyone with relevant professional interests is encouraged to apply, but the organizers are especially interested in submissions from early-career scholars and those with backgrounds that are underrepresented in Victorian Studies.</p>
+					<p><em>Undisciplining the Victorian Classroom</em> (UVC) announces a call for assignments at the intersection of race and dis/ability. Anyone with relevant professional interests is encouraged to apply, but the organizers are especially interested in submissions from early-career scholars and those with backgrounds that are underrepresented in Victorian Studies.</p>
 
-					<p class="center"><em>Extended Submission Deadline:</em> <strong>July 7, 2023</strong></p>
+					<p class="center"><em>Submission Deadline:</em> <strong>May 30, 2025</strong></p>
 
 					<div class="action-button-container">
-						<a class="action-button calls assignments-calls" href="https://docs.google.com/forms/d/e/1FAIpQLSdXRyc42jzkDON4gSg2cHFQQtREacUgFvwEy4pRJjwwPo8IdQ/viewform?usp=sf_link">Submit your assignment</a>
+						<a class="action-button calls assignments-calls" href="https://docs.google.com/forms/d/e/1FAIpQLSeEYXaCqKS-DdR_MK1wN5lHUTqdIDF-LNLYZAsJwXDVpXU3Sw/viewform">Submit your assignment</a>
 					</div>
 				</section>
 
@@ -70,17 +70,23 @@
 				<section aria-labelledby="solicitation">
 					<h3 id="solicitation">Full Solicitation</h3>
 
-					<p><em>Undisciplining the Victorian Classroom</em> (UVC)  is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens. UVC’s site launched in 2021 and publishes a variety of pedagogical materials, including peer-reviewed syllabi, peer-reviewed lesson plans, peer-reviewed assignments, and Zoomcasts (i.e., video interviews with scholars engaged in important antiracist classroom work). The site has since been well-received by Victorianists and has as a whole been <a aria-label="External Link" href="https://reviewsindh.pubpub.org/pub/undisciplining-victorian-classroom/release/4">peer-reviewed</a> for <em>Reviews in Digital Humanities</em>.</p>
+					<p>UVC is a digital humanities project that reimagines how to teach Victorian Studies through a positive, race-conscious lens. UVC’s site launched in 2021 and publishes a variety of pedagogical materials, including peer-reviewed syllabi, peer-reviewed lesson plans, peer-reviewed assignments, and Zoomcasts (i.e., video interviews with scholars engaged in important antiracist classroom work). The site has since been well-received by Victorianists and has as a whole been <a aria-label="External Link" href="https://reviewsindh.pubpub.org/pub/undisciplining-victorian-classroom/release/4">peer-reviewed</a> for <em>Reviews in Digital Humanities</em>.</p>
 
-					<p>UVC is looking for more assignments on Victorian and Neo-Victorian materials to publish in its <a href="/html/assignments.html">Assignments</a> section. Our goal is to provide examples of innovative assignments used in colleges and universities throughout the world so that instructors can adapt them for their own teaching contexts. We are seeking assignments from instructors whose work in the classroom aligns with the <a href="/html/about/values_practices.html">mission</a> of UVC. The assignments can target different levels of students (Undergraduates/Graduates, Majors/Non-majors) and should be antiracist, antiableist and anticolonialist in terms of the content with which students are asked to engage and/or the design and pedagogical grounding of the assignment itself. They should also be student-centered and seek to empower students through different forms of critical and/or creative engagement. For this call, the organizers are particularly interested in assignments with a multimodal or public humanities focus.</p>
+					<p>UVC is looking for more assignments on Victorian and Neo-Victorian materials to publish in its assignment section. Our goal is to provide examples of innovative assignments used in colleges and universities throughout the world so that instructors can adapt them for their own teaching contexts. We are seeking assignments from instructors whose work in the classroom aligns with the <a href="/html/about/values_practices.html">mission</a> of UVC. The assignments can target different levels of students (undergraduates/graduates, majors/non-majors). They should also be student-centered and seek to empower students through different forms of critical and/or creative engagement.</p>
 
-					<p>While these assignments should feature a nineteenth-century component, they do not need to be exclusively used for the Victorianist classroom. For example, an assignment could be created for a Literature &amp; Film course that has a segment on Victorian monsters or a Digital Humanities course that includes digital projects about the nineteenth century. These assignments can be original assignments from courses already taught, revised versions of previously used assignments, or assignments that have been designed but not yet deployed in a course setting.</p>
+					<p>For this call, the organizers are particularly interested in assignments at the intersection of race and dis/ability. Both historically and today, white supremacy and ableism work in concert to invisibly reinforce one another in support of white able-bodiedness: disabled people are racialized, and people of color are characterized as intellectually or physically disabled even when they are not. Antiracist and anticolonial work, therefore, must also be anti-ableist. UVC hopes to expand this dimension of its mission through collecting assignments that address the intersection of race and dis/ability in form or content: assignments that merge antiracist and anti-ableist pedagogies, engage students in considering discourses and depictions of race and ability, or some combination of the two.</p>
 
-					<p>UVC has a simple submission process. For this call, the organizers request a copy of the assignment as well as short answers to a few questions that ask about the history of the assignment; its pedagogical rationale, aims, and visions; and its connection to the UVC mission. These materials will be reviewed by the assignment committee and select instructors will be invited to submit an essay (1,500–2,000 words) that contextualizes the assignment for others to use in different institutions all over the world. UVC will also ask contributors to participate in the peer review process by attending a workshop with the assignment committee and other accepted assignment contributors. Assignments and essays will then be published on our website as open-access resources.</p>
+					<p>While these assignments should feature a nineteenth-century component, they do not need to be exclusively used for the Victorianist classroom. For example, an assignment could be created for a Literature &amp; Film course that has a segment on Victorian monsters or a Digital Humanities course that includes digital projects about the nineteenth century. These assignments can be original assignments from courses already taught, revised versions of previously used assignments, or assignments that have been designed but not yet taught.</p>
 
-					<p><strong>The extended deadline for submissions is July 7, 2023</strong>.  Please submit your assignment and responses directly through this <a aria-label="External Link" href="https://docs.google.com/forms/d/e/1FAIpQLSdXRyc42jzkDON4gSg2cHFQQtREacUgFvwEy4pRJjwwPo8IdQ/viewform?usp=sf_link">Google form</a>. (Note: Google log in is required in order to submit a copy of your actual assignment through the form.) Contributors will be notified of final decisions in July and full essays will be due September 5.</p>
+					<p>UVC has a simple submission process. For this Call for Assignments (CFA), the organizers request a copy of the assignment as well as short answers to a few questions that ask about the history of the assignment; its pedagogical rationale, aims, and visions; and its connection to the UVC mission. These materials will be reviewed by UVC and selected instructors will be invited to submit an essay (1,500–2,000 words) that contextualizes the assignment for others to use in different institutions all over the world. UVC will also ask contributors to participate in the peer review process by attending a workshop with UVC editors and other accepted contributors. Assignments and essays will then be published on our website as open-access resources.</p>
 
-					<p>Visit the <em>Undisciplining the Victorian Classroom</em> site for examples of <a href="/html/assignments.html">previous assignments</a>.</p>
+					<p><strong>The deadline for submissions is May 30, 2025</strong>. Please submit your assignment and responses directly through this <a aria-label="External Link" href="https://docs.google.com/forms/d/e/1FAIpQLSeEYXaCqKS-DdR_MK1wN5lHUTqdIDF-LNLYZAsJwXDVpXU3Sw/viewform?usp=header">Google form</a>. (Note: Google login is required to submit a copy of your assignment through the form.) Contributors will be notified of final decisions in June and full introductory essays and assignments will be due August 29, 2025.</p>
+
+					<p>Visit the <em>Undisciplining the Victorian Classroom</em> site for examples of <a href="/html/assignments.html">previous assignments</a> and to see this Call for Assignments in the context of the website.</p>
+
+					<p>Questions about this CFA and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to Sophia Hsu (<a class="mail" href="sophia.hsu@lehman.cuny.edu">sophia.hsu@lehman.cuny.edu</a>) and Jude Fogarty (<a class="mail" href="hrfogart@buffalo.edu">hrfogart@buffalo.edu</a>).</p>
+
+					<p>To be placed on the UVC mailing list, kindly fill out this <a aria-label="External Link" href="https://forms.gle/TN9M4Ugqy5cwKnoEA">Google form</a>.</p>
 
 					<p>Questions about this CFA and the <em>Undisciplining the Victorian Classroom</em> initiative should be directed to Sophia Hsu (<a aria-label="External Client"  href="mailto:sophia.hsu@lehman.cuny.edu">sophia.hsu@lehman.cuny.edu</a>) and Jude Fogarty (<a aria-label="External Client" href="mailto:hrfogart@buffalo.edu">hrfogart@buffalo.edu</a>).</p>
 
@@ -95,7 +101,7 @@
 									
 				<section class="small" aria-labelledby="citation">
 					<h3 id="citation">Page Citation (MLA)</h3>
-					<p>“Call for Assignments.” <em>Undisciplining the Victorian Classroom</em>, 2022, <a href="/html/assignments/call_for_assignments.html" class="cite-link">https://undiscipliningvc.org/html/assignments/call_for_assignments.html</a>.</p>
+					<p>“Call for Assignments.” <em>Undisciplining the Victorian Classroom</em>, 2025, <a href="/html/assignments/call_for_assignments.html" class="cite-link">https://undiscipliningvc.org/html/assignments/call_for_assignments.html</a>.</p>
 				</section>
 			</main>
 			
