--- a/html/assignments/call_for_assignments.html
+++ b/html/assignments/call_for_assignments.html
@@ -39,8 +39,7 @@
 			<main id="main" aria-labelledby="assignments">
 				<h2 id="assignments">Call for Assignments (2025)</h2>
 				<div class="aspect-ratio-box">
-					<img src="/img/assignments/uvc_0040-1800px.jpg" srcset="/img/assignments/uvc_0040-1800px.jpg 1800w, /img/assignments/uvc_0040-1650px.jpg 1650w, /img/assignments/uvc_0040-1500px.jpg 1500w, /img/assignments/uvc_0040-1350px.jpg 1350w, /img/assignments/uvc_0040-1200px.jpg 1200w, /img/assignments/uvc_0040-1050px.jpg 1050w, /img/assignments/uvc_0040-900px.jpg 900w, /img/assignments/uvc_0040-750px.jpg 750w, /img/assignments/uvc_0040-600px.jpg 600w, /img/assignments/uvc_0040-450px.jpg 450w, /img/assignments/uvc_0040-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of wool, single interlocking tapestry weave; two selvages present."/>
-					<a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
+					<img src="/img/assignments/uvc_0101-1800px.jpg" srcset="/img/assignments/uvc_0101-1800px.jpg 1800w, /img/assignments/uvc_0101-1650px.jpg 1650w, /img/assignments/uvc_0101-1500px.jpg 1500w, /img/assignments/uvc_0101-1350px.jpg 1350w, /img/assignments/uvc_0101-1200px.jpg 1200w, /img/assignments/uvc_0101-1050px.jpg 1050w, /img/assignments/uvc_0101-900px.jpg 900w, /img/assignments/uvc_0101-750px.jpg 750w, /img/assignments/uvc_0101-600px.jpg 600w, /img/assignments/uvc_0101-450px.jpg 450w, /img/assignments/uvc_0101-300px.jpg 300w" sizes="(min-width: 1300px) 900px, (min-width: 1000px) calc(53.57vw + 214px), (min-width: 780px) 700px, 92.61vw" alt="A work made of wool, dovetailed tapestry weave; twined edges; (remnants of) corner knotted tassel."/><a id="information" class="caption" href="#caption" aria-label="Go to image caption"><i class="fa fa-info-circle"></i></a>
 				</div>
 
 				<section class="menu-container" aria-labelledby="menu">
@@ -96,7 +95,9 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>Once Known Navajo (Diné) Artist. <a aria-label="External Link" href="https://www.artic.edu/artworks/148331/moqui-style-sarape">Moqui-Style Sarape</a>. [c.1870]. Art Institute of Chicago, Chicago, 1997.458. Through prior acquisitions of Louis A. Allen, Mr. and Mrs. James W. Alsdorf, The Alsdorf Foundation, Joseph P. Antonow, Edward E. Ayer in memory of Charles L. Hutchinson, Herbert Baker, Mr. and Mrs. Dave Chapman, Sylvia Coppersmith in memory of Leila Rosen, Mrs. Eugene A. Davidson, Domenic DiPiero, Maurice D. Galleher Endowment, Mr. and Mrs. Edwin E. Hokin, Mrs. Maurice H. Mandelbaum as a gift of her family, Mr. and Mrs. Everett McNear; Mr. and Mrs. Michael Newbury, Dr. H. Van de Waal, Mr. and Mrs. Raymond Wielgus and Suzette Morton Zurcher. CC0 1.0 Universal (CC0 1.0) Public Domain Dedication. The use of this image here and other such images on our <a href="/html/syllabi/call_for_syllabi_and_syllabus_clusters.html">Call for Syllabi and Syllabus Clusters</a> page alludes to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
+					<p>
+						
+						Once Known Pueblo Artist. <a aria-label="External Link" href="https://www.artic.edu/artworks/94152/blanket">Blanket</a>. [1851-1900]. Art Institute of Chicago, Chicago, 1977.513. Gift of Mrs. Julian Armstrong, Jr . CC0 Public Domain Dedication. The use of this image here alludes to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
 				</section>
 									
 				<section class="small" aria-labelledby="citation">
