--- a/html/assignments/call_for_assignments.html
+++ b/html/assignments/call_for_assignments.html
@@ -95,9 +95,7 @@
 				<section class="small" aria-labelledby="caption">
 					<h3 id="caption">Tile/Header Image Caption</h3>
 
-					<p>
-						
-						Once Known Pueblo Artist. <a aria-label="External Link" href="https://www.artic.edu/artworks/94152/blanket">Blanket</a>. [1851-1900]. Art Institute of Chicago, Chicago, 1977.513. Gift of Mrs. Julian Armstrong, Jr . CC0 Public Domain Dedication. The use of this image here alludes to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
+					<p>Once Known Pueblo Artist. <a aria-label="External Link" href="https://www.artic.edu/artworks/94152/blanket">Blanket</a>. [1851-1900]. Art Institute of Chicago, Chicago, 1977.513. Gift of Mrs. Julian Armstrong, Jr . CC0 Public Domain Dedication. The use of this image here alludes to the efforts of <em>Undisciplining the Victorian Classroom</em> to engage in unlearning by working across disciplines, cultures, and historical periods, while introducing alternate ways of knowing and representing the world into Victorian Studies.</p>
 				</section>
 									
 				<section class="small" aria-labelledby="citation">
